<resources>
    <string name="app_name">Practice</string>

    <string name="text_input_email_label">Ingresa tu correo</string>
    <string name="text_continue">Continuar</string>
    <string name="text_email_example">example@email.com</string>
    <string name="text_create_password">Crea tu constraseña</string>
    <string name="text_done">Finalizar</string>
    <string name="text_login">Inicia sesión</string>
    <string name="text_user">Usuario</string>
    <string name="text_email">Correo electrónico</string>
    <string name="text_password">Contraseña</string>
    <string name="text_signin">Iniciar sesión</string>
    <string name="text_signup">Registrarse</string>
    <string name="text_helper_email">Ingresa un correo electrónico válido</string>
    <string name="text_input_password">Crea tu contraseña</string>
    <string name="text_input_confirm_password">Confirma tu contraseña</string>
    <string name="text_go_cart">Ver carrito</string>
    <string name="text_error">Error</string>
    <string name="text_accept">Aceptar</string>
    <string name="text_cancel">Cancelar</string>
    <string name="text_ticket_title">Ticket de compra</string>
    <string name="text_count">Cantidad</string>
    <string name="text_product">Producto</string>
    <string name="text_price">Precio</string>
    <string name="text_buy">Comprar</string>
    <string name="text_logo">GoCart!</string>
</resources>