<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="viewModel"
            type="com.example.practice.presentation.signup.viewmodel.SignUpVM" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_large">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextTitleLabel"
                android:id="@+id/tvEmailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_input_email_label"
                android:layout_marginTop="@dimen/margin_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextLabel"
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/text_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEmailTitle" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/inputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/text_email_example"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:helperText="@{viewModel.signupEmailError}"
                app:hintEnabled="false"
                app:hintAnimationEnabled="false"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintBottom_toTopOf="@id/btnContinue"
                app:layout_constraintTop_toBottomOf="@id/tvEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:afterTextChanged="@{() -> viewModel.afterEmailTextChanged(etEmail)}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:onClick="@{onClickListener}"
                android:text="@string/text_continue"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
