<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.example.practice.utils.tools.Converter" />

        <variable
            name="viewModel"
            type="com.example.practice.presentation.home.viewmodel.HomeVM" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextTitleLabelCenter"
                android:id="@+id/tvTicketTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:text="@string/text_ticket_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextLabelCenter"
                android:id="@+id/clColumnLeft"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/text_count"
                app:layout_constraintEnd_toStartOf="@id/clColumnCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTicketTitle" />
            <com.google.android.material.textview.MaterialTextView
                style="@style/TextLabelCenter"
                android:id="@+id/clColumnCenter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/text_product"
                app:layout_constraintEnd_toStartOf="@id/clColumnRight"
                app:layout_constraintStart_toEndOf="@id/clColumnLeft"
                app:layout_constraintTop_toBottomOf="@id/tvTicketTitle" />
            <com.google.android.material.textview.MaterialTextView
                style="@style/TextLabelCenter"
                android:id="@+id/clColumnRight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/text_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/clColumnCenter"
                app:layout_constraintTop_toBottomOf="@id/tvTicketTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ticketItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                app:layout_constraintTop_toBottomOf="@id/clColumnCenter"
                tools:itemCount="3"
                tools:listitem="@layout/item_ticket"/>

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextTitleLabelRight"
                android:id="@+id/tvTicketTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:text='@{"Total:" + Converter.amountToString(viewModel.homeTotal)}'
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintBottom_toTopOf="@id/btnDone"
                app:layout_constraintTop_toBottomOf="@id/ticketItems"
                tools:text="Total: $5,000.00" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_xlarge"
                android:text="@string/text_done"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
