<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="viewModel"
            type="com.example.practice.presentation.login.viewmodel.LoginVM" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_large">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextTitleLabel"
                android:id="@+id/tvLoginTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_login"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextLabel"
                android:id="@+id/tvUserLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:text="@string/text_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLoginTitle" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/inputLayoutUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                app:layout_constraintTop_toBottomOf="@id/tvUserLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputUser"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:afterTextChanged="@{() -> viewModel.afterEmailTextChanged(inputUser)}"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextLabel"
                android:id="@+id/tvPasswordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/text_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputLayoutUser" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/inputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/tvPasswordLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:afterTextChanged="@{() -> viewModel.afterPwdTextChanged(inputPassword)}"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{onClickListener}"
                android:text="@string/text_signin"
                app:layout_constraintBottom_toBottomOf="parent" />

            <include
                layout="@layout/layout_loader"
                android:id="@+id/loaderContainer"
                android:visibility="gone"
                tools:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
