<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="viewModel"
            type="com.example.practice.presentation.signup.viewmodel.SignUpVM" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_large">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextTitleLabel"
                android:id="@+id/tvPasswordTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_create_password"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextLabel"
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_input_password"
                android:layout_marginTop="@dimen/margin_large"
                app:layout_constraintTop_toBottomOf="@id/tvPasswordTitle"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/inputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/tvPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:afterTextChanged="@{() -> viewModel.afterPwdTextChanged(inputPassword)}"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextLabel"
                android:id="@+id/tvConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/text_input_confirm_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputLayoutPassword" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/inputLayoutPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_small"
                app:layout_constraintVertical_bias="0.0"
                app:passwordToggleEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/btnDone"
                app:layout_constraintTop_toBottomOf="@id/tvConfirmPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPasswordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:afterTextChanged="@{() -> viewModel.afterPwdConfirmTextChanged(inputPasswordConfirm)}"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:onClick="@{onClickListener}"
                android:text="@string/text_done"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <FrameLayout
                android:id="@+id/loaderContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
